<resources>
    <string name="add_camer_invi">ID number is invalid</string>
    <string name="add_camer_no_add">Doorbell number is 8 at most!</string>
    <string name="add_camera">Add Device</string>
    <string name="add_search_no">Can not find, please try again...</string>
    <string name="add_search_result">Search results</string>
    <string name="add_twodimensioncode">QR code program is starting ...</string>
    <string name="alarm_log_no">Unread</string>
    <string name="alarm_log_yes">Read</string>
    <string name="alart_agree_txt">Read and agree</string>
    <string name="alart_cancel_txt">NO</string>
    <string name="alart_confirm_txt">YES</string>
    <string name="alart_content_txt">Are you sure to delete the device?</string>
    <string name="alart_disagree_txt">cancel</string>
    <string name="alart_title_txt">Delete device</string>
    <string name="alerm_log">Records</string>
    <string name="alerm_no_log">No record</string>
    <string name="alerm_push_notify">Records</string>
    <string name="ap_distrubtion_net">AP net distribution...</string>
    <string name="app_name">Little Stars</string>
    <string name="app_name1">Little Stars</string>
    <string name="biz_add_cancel">cancel</string>
    <string name="biz_add_creat">confirm</string>
    <string name="biz_add_edit_show">Enter username at least 5</string>
    <string name="biz_add_edit_show1">Enter password at least 6</string>
    <string name="biz_add_edit_show2">Enter password at least 6</string>
    <string name="biz_add_edit_show_sucess">Password changed successfully</string>
    <string name="biz_add_poup_modify">Please modify user name or password</string>
    <string name="biz_add_poup_show">Enter username and password</string>
    <string name="biz_add_poup_show111">Edit username or password</string>
    <string name="biz_add_poup_show2">Modify password</string>
    <string name="biz_add_poup_title">Enter username and password</string>
    <string name="biz_add_show_pwd">Enter password at least 6</string>
    <string name="biz_add_show_user">Enter username at least 5</string>
    <string name="biz_main_about">About</string>
    <string name="biz_main_exit">Exit</string>
    <string name="biz_main_out">Background</string>
    <string name="biz_main_sound">Bell ring</string>
    <string name="camera_connect_device_access">Connect to device hostpot</string>
    <string name="camera_connect_device_access_please">The phone is not connected to a valid device hostpot.</string>
    <string name="camera_device_info">Connect to the hostpots，waiting for the icon show on statubar,then back to APP</string>
    <string name="camera_id">ID</string>
    <string name="camera_input_wifi_info">Input WiFi Information</string>
    <string name="camera_modify_failed">modify failed！</string>
    <string name="camera_modify_ing">modify username or passwd...</string>
    <string name="camera_modify_success">modify success！</string>
    <string name="camera_name">Name</string>
    <string name="camera_play_return_text">&lt;</string>
    <string name="camera_pwd">Password</string>
    <string name="camera_user">Username</string>
    <string name="camera_wifi_name">WiFi Name:</string>
    <string name="camera_wifi_passwd">WiFi Passwd:</string>
    <string name="cannot_call_cloud">The doorbell is not online, and cloud storage can not be accessed.</string>
    <string name="click_again_exit">Click again to exit app!</string>
    <string name="cloud_log">Cloud records</string>
    <string name="cloud_title_1">Cloud storage</string>
    <string name="connect_failed_button">Confirm</string>
    <string name="connect_failed_info"> 1:Check if the device is connected to a network \10\10 2:Check if the WIFI is 2.4G \10\10 3:Verify the WIFI password \10\10 4:Check if the device and mobile phone are close to the router</string>
    <string name="connect_failed_notice"> </string>
    <string name="connect_failed_title">Device connect failed</string>
    <string name="connected">Connected</string>
    <string name="connecting">Fetching videos ...</string>
    <string name="date_alamotu">(GMT +06:00) Almaty, Novosibirsk, asitanan, Dahl</string>
    <string name="date_alaska">(GMT-09:00)Alaska</string>
    <string name="date_athens">(GMT +02:00) Athens, Jerusalem, Cairo, Helsinki,</string>
    <string name="date_auckland">(GMT +12:00) Auckland, Wellington, Fiji</string>
    <string name="date_baku">(GMT +04:00) Baku, Tbilisi, Abu Dhabi, Muscat</string>
    <string name="date_bangkok">(GMT +07:00) Bangkok, Hanoi, Jakarta</string>
    <string name="date_beijing">(GMT +08:00) Beijing, Singapore, Taipei</string>
    <string name="date_brasilia">(GMT-03:00)Brasilia, Buenos Aires, ruosiailisi, Georgetown</string>
    <string name="date_brussels">(GMT+01:00)Brussels, Paris, Berlin, Rome, Madrid, siduogeermo, Belgrade, Prague</string>
    <string name="date_calcutta">(GMT +05:30) Calcutta, Bombay, Madras, New Delhi</string>
    <string name="date_cape_verde_island">(GMT-01:00)Cape Verde Islands</string>
    <string name="date_center_ocean">(GMT-02:00)Mid-Atlantic</string>
    <string name="date_darwin">(GMT +09:30) Darwin</string>
    <string name="date_device_time">Equipment time</string>
    <string name="date_device_timezone">Set time zone</string>
    <string name="date_eastern_time">(GMT-05:00)Eastern time (United States and Canada), Lima, Bogota</string>
    <string name="date_get_params">Getting the clock information ...</string>
    <string name="date_greenwich">(GMT)Greenwich, London, Lisbon, Casablanca</string>
    <string name="date_guam">(GMT +10:00) Guam, Melbourne, Sydney, Port Moresby, Vladivostok</string>
    <string name="date_hawaii">(GMT -10:00) Hawaii</string>
    <string name="date_islamabad">(GMT +05:00) Islamabad, Karachi, tasengan</string>
    <string name="date_kebuer">(GMT +04:30) Kobul</string>
    <string name="date_middle_island">(GMT-11:00)Midway Island, Samoa</string>
    <string name="date_middle_part_time">(GMT-06:00)Central time (United States and Canada), Mexico City</string>
    <string name="date_mountain_time">(GMT-07:00)Mountain time (United States and Canada)</string>
    <string name="date_nairobi">(GMT +03:00)Nairobi, Riyadh, Moscow</string>
    <string name="date_newfoundland">(GMT-03:30)Newfoundland</string>
    <string name="date_ntp_server">NTP server</string>
    <string name="date_ntp_server_auto_check">Synchronize with NTP server</string>
    <string name="date_ntp_server_time_kriss_re_kr">time.kriss.re.kr</string>
    <string name="date_ntp_server_time_nist_gov">time.nist.gov</string>
    <string name="date_ntp_server_time_nuri_net">time.nuri.net</string>
    <string name="date_ntp_server_time_windows_com">time.windows.com</string>
    <string name="date_ocean_time">(GMT-04:00)Atlantic time (Canada), Santiago, La Paz</string>
    <string name="date_pacific_time">(GMT-08:00)Pacific time (United States and Canada)</string>
    <string name="date_phone_time_auto_check">Using the mobile device\'s clock time calibration</string>
    <string name="date_seoul">(GMT +09:00) Seoul, ya Yakutsk, Tokyo</string>
    <string name="date_setting_failed">Device failed to clock time setting</string>
    <string name="date_setting_success">Equipment clock time set succeed</string>
    <string name="date_suolumen">(GMT +11:00)Magadan, Solomon Islands, New Caledonia</string>
    <string name="date_teheran">(GMT +03:30) Tehran</string>
    <string name="del_alert">Confirm delete?</string>
    <string name="delect_sucss">Deleted successfully</string>
    <string name="delete_camera">Delete</string>
    <string name="dev_no_tf_card">TF card not exist!</string>
    <string name="device_not_on_line">Offline</string>
    <string name="device_status_name">State:</string>
    <string name="done">Done</string>
    <string name="door_play_talk_normal">Hold to talk</string>
    <string name="door_play_talk_press">Loosen end</string>
    <string name="door_setting_alarm_show1">Enter time</string>
    <string name="door_white_list_check_show">User already exists</string>
    <string name="door_white_list_del">Delete</string>
    <string name="door_white_list_edit">Edit</string>
    <string name="doorbell">DoorBell</string>
    <string name="doorbell_add_yao_show">Shake search local area network (LAN) equipment</string>
    <string name="doorbell_alerm">Alarm</string>
    <string name="doorbell_alerm11">Tamper alarm</string>
    <string name="doorbell_alerm_no">Not answer</string>
    <string name="doorbell_alerm_ok">Has been answered</string>
    <string name="doorbell_check">WiFi signal is not detected, please connect to WLAN!</string>
    <string name="doorbell_fangke">Visitor calling</string>
    <string name="doorbell_listing_other">Other users have been connected</string>
    <string name="doorbell_play_cancel">Call End</string>
    <string name="doorbell_play_hz">Delay</string>
    <string name="doorbell_play_pic">Photo</string>
    <string name="doorbell_play_sound">Hold to talk</string>
    <string name="doorbell_play_video">Video</string>
    <string name="doorbell_play_vq">Unlock</string>
    <string name="doorbell_reset">Refresh WiFi</string>
    <string name="doorbell_setting">Configuration</string>
    <string name="doorbell_setting_admin">Administrator</string>
    <string name="doorbell_setting_alarm_delay">Delay time (seconds）</string>
    <string name="doorbell_setting_alarm_statu">Status：</string>
    <string name="doorbell_setting_alarm_statu_close">Off</string>
    <string name="doorbell_setting_alarm_statu_open">On</string>
    <string name="doorbell_setting_alarm_time_end">End time</string>
    <string name="doorbell_setting_alarm_time_start">Start time</string>
    <string name="doorbell_setting_alarm_type">Type</string>
    <string name="doorbell_setting_alarm_type_0">Motion detection</string>
    <string name="doorbell_setting_alarm_type_0_1">Sensitivity</string>
    <string name="doorbell_setting_alarm_type_1">PIR</string>
    <string name="doorbell_setting_alarm_type_2">Motion detection +PIR</string>
    <string name="doorbell_wifi">Current WiFi</string>
    <string name="doorbell_wifi_one_key">AP Configuration</string>
    <string name="doorbell_wifi_pwd">Password</string>
    <string name="hbelldaemon">Bell Daemon</string>
    <string name="localpic_no">No photo</string>
    <string name="main_edit">Edit</string>
    <string name="main_select_all">Select all</string>
    <string name="main_select_reverse">Unselected</string>
    <string name="one_key_pwd_show">Enter WiFi password</string>
    <string name="one_key_setting_ca">Next</string>
    <string name="one_key_setting_stat_ing">Configuration...</string>
    <string name="one_key_setting_stat_show">Input the correct WIFi password, is in configuration mode of equipment will be around even on the WIFi</string>
    <string name="one_key_setting_stat_show1">If you need to add the device has been configured network, click skip to enter the LAN search...</string>
    <string name="one_key_setting_stat_show2">Please configure the device in the configuration mode (long press the call key 5 seconds)</string>
    <string name="one_key_ssid_show">Wifi SSID</string>
    <string name="onkey_1">Onekey Configure</string>
    <string name="onkey_2_show">Please align the 2D code with the doorbell camera</string>
    <string name="onkeyshow">To hear the doorbell network configuration success tips, please click to complete</string>
    <string name="pic_save_path">/mnt/sdcard/LittleStars/pic</string>
    <string name="refresh">Refresh</string>
    <string name="sertch_sdadd">Manually add</string>
    <string name="setting">Setting</string>
    <string name="setting_user_1">Show</string>
    <string name="soft_name">APP Name</string>
    <string name="softversion">2.8</string>
    <string name="softversion1">5.9.18.1024-LIT</string>
    <string name="version_code">Version</string>
    <string name="version_code1">Inner Version</string>
</resources>