<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" android:fitsSystemWindows="true" android:clipToPadding="true" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/bg_style">
        <RelativeLayout android:gravity="center_vertical" android:background="@color/color_white" android:layout_width="match_parent" android:layout_height="50dp">
            <TextView android:textSize="@dimen/y40" android:textColor="@color/color_black" android:gravity="center_vertical" android:id="@+id/back" android:layout_width="@dimen/y160" android:layout_height="@dimen/y80" android:layout_marginLeft="@dimen/x20" android:text="@string/camera_play_return_text" android:layout_centerVertical="true"/>
            <object.p2pipcam.system.MyTextView android:textSize="18sp" android:textStyle="bold" android:textColor="@color/color_black" android:ellipsize="marquee" android:layout_gravity="center_vertical" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:maxWidth="150dp" android:text="@string/add_camera" android:scrollHorizontally="true" android:singleLine="true" android:shadowColor="@color/color_shadow" android:shadowDx="1" android:shadowDy="1" android:shadowRadius="1" android:layout_centerInParent="true" android:marqueeRepeatLimit="marquee_forever"/>
        </RelativeLayout>
        <TextView android:textSize="13sp" android:textColor="@color/color_black" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="10dp" android:layout_marginRight="10dp" android:layout_marginBottom="5dp" android:text="@string/one_key_setting_stat_show2"/>
        <TextView android:textSize="12sp" android:textColor="@color/color_black" android:gravity="center" android:id="@+id/textView1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="5dp" android:layout_marginRight="10dp" android:layout_marginBottom="5dp" android:text="@string/one_key_setting_stat_show"/>
        <RelativeLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="40dp" android:layout_marginLeft="10dp">
            <TextView android:textSize="@dimen/text_title_size" android:textColor="@color/color_black" android:gravity="center_vertical" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="40dp" android:layout_marginLeft="5dp" android:maxWidth="200dp" android:minWidth="70dp" android:text="SSID:" android:singleLine="true" android:layout_alignParentLeft="true" android:layout_centerVertical="true"/>
            <Button android:id="@+id/button_refresh" android:layout_marginRight="15dp" android:text="@string/refresh" android:layout_alignParentTop="true" android:layout_alignParentRight="true" style="@style/button_open_close_style"/>
            <EditText android:textColor="@color/color_biz_camerastatu" android:id="@+id/editSSID" android:background="#ffffff" android:paddingLeft="5dp" android:layout_marginRight="80dp" android:hint="@string/one_key_ssid_show" android:layout_toRightOf="@+id/textView2" android:layout_centerVertical="true" style="@style/onekey_edit_style"/>
        </RelativeLayout>
        <RelativeLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginLeft="10dp" android:layout_marginTop="5dp">
            <TextView android:textSize="@dimen/text_title_size" android:textColor="@color/color_black" android:gravity="center_vertical" android:id="@+id/tvddd" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="5dp" android:maxWidth="200dp" android:minWidth="70dp" android:text="@string/camera_pwd" android:singleLine="true" android:layout_alignParentLeft="true" android:layout_centerVertical="true"/>
            <EditText android:textColor="@color/color_black" android:id="@+id/editPwd" android:background="#ffffff" android:paddingLeft="5dp" android:focusable="true" android:layout_marginRight="80dp" android:hint="@string/one_key_pwd_show" android:layout_toRightOf="@+id/tvddd" android:layout_centerVertical="true" style="@style/onekey_edit_style"/>
            <Button android:id="@+id/button_open_ss" android:layout_marginRight="15dp" android:text="@string/setting_user_1" android:layout_alignParentTop="true" android:layout_alignParentRight="true" style="@style/button_open_close_style"/>
        </RelativeLayout>
        <Button android:textSize="@dimen/text_title_size" android:textColor="@color/color_blue1" android:layout_gravity="center" android:id="@+id/buttonstart" android:background="@drawable/newbuttonall" android:paddingLeft="10dp" android:paddingRight="15dp" android:layout_width="160dp" android:layout_height="45dp" android:layout_marginTop="15dp" android:text="@string/onkey_1" android:singleLine="true"/>
        <TextView android:textSize="12sp" android:textColor="@color/color_black" android:gravity="center" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="15dp" android:layout_marginRight="10dp" android:layout_marginBottom="5dp" android:text="@string/one_key_setting_stat_show1"/>
        <Button android:textSize="@dimen/text_title_size" android:textColor="@color/color_blue1" android:gravity="center" android:layout_gravity="right" android:id="@+id/buttontg" android:background="@drawable/newbuttonall" android:paddingLeft="10dp" android:paddingRight="15dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="45dp" android:layout_margin="15dp" android:text="@string/one_key_setting_ca" android:singleLine="true"/>
        <Button android:textSize="@dimen/text_title_size" android:textColor="@color/color_blue1" android:gravity="center" android:layout_gravity="center" android:id="@+id/buttonShow" android:background="@drawable/newbuttonall" android:visibility="gone" android:layout_width="match_parent" android:layout_height="45dp" android:layout_marginLeft="15dp" android:layout_marginTop="15dp" android:layout_marginRight="15dp" android:text="@string/sertch_sdadd" android:singleLine="true"/>
        <View android:layout_width="match_parent" android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/pp_ll_setting" android:background="#90000000" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent">
        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/PP_tv_ershow" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/onkey_2_show"/>
        <ProgressBar android:id="@+id/progressBar1" android:layout_width="wrap_content" android:layout_height="wrap_content" style="?android:attr/progressBarStyleLarge"/>
        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/PP_tv_setting" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/one_key_setting_stat_ing"/>
        <ImageView android:layout_gravity="center" android:id="@+id/img_er" android:visibility="gone" android:layout_width="250dp" android:layout_height="250dp" android:layout_marginTop="2dp" android:scaleType="center"/>
        <TextView android:textColor="@color/color_white" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="40dp" android:text="@string/onkeyshow"/>
        <Button android:textColor="@color/color_black" android:background="@drawable/newbuttonall" android:layout_width="80dp" android:layout_height="40dp" android:layout_marginTop="5dp" android:text="@string/done"/>
    </LinearLayout>
</FrameLayout>
