<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:android_custom="http://schemas.android.com/apk/res-auto" xmlns:ptr="http://schemas.android.com/apk/res/com.jxl.app.littlestars.project" android:orientation="vertical" android:fitsSystemWindows="true" android:clipToPadding="true" android:layout_width="match_parent" android:layout_height="match_parent" style="@style/bg_style">
    <RelativeLayout android:gravity="center_vertical" android:id="@+id/top" android:background="@color/color_white" android:layout_width="match_parent" android:layout_height="50dp" android:layout_alignParentLeft="true" android:layout_alignParentTop="true">
        <TextView android:textSize="@dimen/y40" android:textColor="@color/color_black" android:gravity="center_vertical" android:id="@+id/back" android:layout_width="@dimen/y160" android:layout_height="@dimen/y80" android:layout_marginLeft="@dimen/x20" android:text="@string/camera_play_return_text" android:layout_centerVertical="true" android:onClick="onClick"/>
        <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="@color/color_black" android:layout_gravity="center_vertical" android:id="@+id/tv_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="@string/setting" android:shadowColor="@color/color_shadow" android:shadowDx="1" android:shadowDy="1" android:shadowRadius="1" android:layout_centerInParent="true"/>
        <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="@color/color_white" android:layout_gravity="center_vertical" android:id="@+id/tv_select_sum" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:shadowColor="@color/color_shadow" android:shadowDx="1" android:shadowDy="1" android:shadowRadius="1" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
        <Button android:textColor="@color/color_white" android:id="@+id/edit" android:background="@drawable/btnselector" android:visibility="gone" android:layout_width="50dp" android:layout_height="40dp" android:layout_margin="5dp" android:text="@string/main_edit" android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <LinearLayout android:id="@+id/del_bottom_layout" android:padding="5dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="50dp" android:layout_alignParentBottom="true">
        <Button android:textColor="#129ae3" android:id="@+id/selectall" android:background="@drawable/add_btn_selector" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginRight="5dp" android:text="@string/main_select_all" android:layout_weight="1"/>
        <Button android:textColor="#129ae3" android:id="@+id/selectreverse" android:background="@drawable/add_btn_selector" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginRight="5dp" android:text="@string/main_select_reverse" android:layout_weight="1"/>
        <Button android:textColor="#129ae3" android:id="@+id/delete" android:background="@drawable/add_btn_selector" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/delete_camera" android:layout_weight="1"/>
    </LinearLayout>
    <TextView android:textSize="16sp" android:textColor="#129ae3" android:gravity="center" android:id="@+id/tv_show" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/pic_save_path" android:layout_below="@+id/top"/>
    <GridView android:gravity="center" android:id="@+id/gridView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5dp" android:listSelector="@drawable/listitem_bg_selector" android:horizontalSpacing="5dp" android:verticalSpacing="5dp" android:stretchMode="columnWidth" android:columnWidth="150dp" android:numColumns="2" android:layout_above="@+id/del_bottom_layout" android:layout_below="@+id/tv_show"/>
    <TextView android:textSize="24sp" android:textColor="#129ae3" android:gravity="center_vertical" android:id="@+id/localpic_tv_nopic" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/localpic_no" android:layout_centerInParent="true"/>
</RelativeLayout>
