<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@drawable/newbg" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:gravity="center_vertical" android:id="@+id/top" android:background="@color/color_white" android:layout_width="match_parent" android:layout_height="50dp">
        <Button android:textSize="@dimen/text_title_size" android:textColor="@color/color_black" android:id="@+id/back" android:background="@drawable/btn_back_selector" android:visibility="invisible" android:layout_width="60dp" android:layout_height="40dp" android:layout_alignParentLeft="true" android:layout_centerVertical="true"/>
        <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="@color/color_black" android:layout_gravity="center_vertical" android:id="@+id/tv_camera_setting" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="@string/biz_main_about" android:shadowColor="@color/color_shadow" android:shadowDx="1" android:shadowDy="1" android:shadowRadius="1" android:layout_centerInParent="true"/>
    </RelativeLayout>
    <ScrollView android:padding="10dp" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1">
        <LinearLayout android:orientation="vertical" android:paddingLeft="10dp" android:paddingTop="10dp" android:paddingRight="10dp" android:paddingBottom="15dp" android:layout_width="match_parent" android:layout_height="match_parent">
            <ImageView android:layout_gravity="center_horizontal" android:id="@+id/imageView1" android:layout_width="72dp" android:layout_height="72dp" android:layout_marginTop="15dp" android:src="@drawable/little_stars_logo_icon_green"/>
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp">
                <TextView android:textColor="#95000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/version_code"/>
                <TextView android:textColor="#95000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="@string/softversion"/>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:background="@drawable/background_whitef12_corner" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="40dp">
                <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <TextView android:textColor="#000000" android:gravity="center_vertical" android:layout_width="150dp" android:layout_height="60dp" android:layout_marginLeft="15dp" android:text="@string/soft_name"/>
                    <TextView android:textColor="#000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_name"/>
                </LinearLayout>
                <View android:background="#80000000" android:layout_width="match_parent" android:layout_height="0.1dp"/>
                <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <TextView android:textColor="#000000" android:gravity="center_vertical" android:layout_width="150dp" android:layout_height="60dp" android:layout_marginLeft="15dp" android:text="@string/version_code1"/>
                    <TextView android:textColor="#000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/softversion1"/>
                </LinearLayout>
                <View android:background="#80000000" android:visibility="gone" android:layout_width="match_parent" android:layout_height="0.1dp"/>
                <Button android:gravity="left|center_vertical|center_horizontal|center" android:id="@+id/setting_deamon" android:background="@drawable/listitem1_pressed_selector" android:paddingLeft="15dp" android:paddingRight="10dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="60dp" android:text="@string/hbelldaemon" android:singleLine="true" android:drawableRight="@drawable/biz_btn_right_selector"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
